# bootcamp-project

./: .dockerignore  .env.example  .gitignore  README.md  compose.yaml  dockerfile  neznayu.txt  pyproject.toml  requirements-dev.txt  requirements.txt  tasks.md
.github/: .pre-commit-config.yaml
.github/workflows/: lint.yml
app/: main.py
scripts/: load_population.py  run_eda.py
