[project]
name = "covid-analytics-platform"
version = "0.1.0"
description = "COVID-19 data integration, analytics, API, and visualization platform"
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "fastapi",
    "pandas",
    "pymongo",
    "python-dotenv",
    "redis",
    "requests",
    "snowflake-connector-python[pandas]",
    "uvicorn[standard]",
]


[dependency-groups]
dev = [
    "black==26.5.1",
    "isort==8.0.1",
    "pre-commit==4.6.0",
    "ruff==0.15.22",
]


[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = []


[tool.black]
line-length = 88
target-version = ["py312"]


[tool.isort]
profile = "black"
line_length = 88
py_version = 312
skip_gitignore = true


[tool.ruff]
line-length = 88
target-version = "py312"


[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "W",
    "B",
    "UP",
]
